# graph-constrained-reasoning-dca

./: .gitignore  AGENTS.md  ATTRIBUTIONS.md  EXPERIMENT_GUIDE.md  EXPLAINER.md  FINAL_SOLUTION.md  GCR_Colab.ipynb  GCR_EXPERIMENT.md  KNOWLEDGE_GRAPH_MINI_BOOK.md  MENTAL_MODEL.md  PROJECT_OVERVIEW.md  README.md  RESEARCH_NOTES.md  UMaT_Undergraduate_Project_Report_Template.txt  chapter3_updated.md  pyproject.toml  pyrightconfig.json
approach1_cosine/: README.md  core_algorithm.py
approach2_decomposed/: README.md  core_algorithm.py
approach3_symbolic/: EXPERIMENT_RESULTS.md  README.md  intent_parser.py  ontology_reasoner.py  type_oracle.py
demo/: __init__.py  app.py  config.py  d3_visualization.html  dca_trie.py  kg.py  llm.py  questions.py
docs/: 4_IDEAS_EXPERIMENT.md  ALL_COMMANDS.md  CHAPTER4_MANUSCRIPT.md  CHAPTER4_RESULTS.md  DCA_REFRAMING.md  DEFENSE_QUICK_REFERENCE.md  DISSERTATION_DEFENSE_STRATEGY.md  EVALUATION_METRICS.md  EXPERIMENT_RESULTS.md  GCR_EXPERIMENT_COMPARISON.md  KNOWLEDGE_GRAPH_PRIMER.md  MENTAL_MODEL.md  ORT_IMPROVEMENTS.md  PIPELINE_EXPLAINED.md  PRESENTATION_PLAN.md  PROJECT_OVERVIEW.md  README.md  REMAINING_EXPERIMENTS.md  RESEARCH_LANDSCAPE.md  SIR_EXPLAINED.md  SUPERVISOR_BRIEF.md  TECHNICAL_REFERENCE.md  VAST_AI_AUTOMATION.md  VAST_AI_COMMANDS.md  VAST_AI_SETUP.md
ideas_webqsp_full/: config.json  predictions_adaptive100.jsonl  predictions_adaptive30.jsonl  predictions_adaptive500.jsonl  predictions_baseline.jsonl  predictions_filtered.jsonl  predictions_label-plan.jsonl  predictions_validate.jsonl
kg-mini-book/: kg-mini-book.aux  (+23 more)
(+163 files in other folders)
