[project]
name = "graph-constrained-reasoning"
version = "0.1.0"
description = "Graph-constrained reasoning with LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=4.44",
    "accelerate>=0.30",
    "peft>=0.11",
    "tiktoken>=0.7",
    "openai>=1.31",
    "datasets>=2.19",
    "python-dotenv>=1.0",
    "marisa-trie>=1.2",
    "scikit-learn>=1.5",
    "trl>=0.9",
    "sentencepiece>=0.2",
    "protobuf>=5.27",
    "wandb>=0.17",
]

[project.optional-dependencies]
gpu = [
    "bitsandbytes>=0.43",
    "deepspeed>=0.14",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ty]
extra-paths = ["experiments/type_oracle_full"]

[tool.ruff]
# Ruff config — linting rules for the project
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # line-length handled by formatter


[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
